--- a/app/src/main/res/layout/activity_purchase.xml
+++ b/app/src/main/res/layout/activity_purchase.xml
@@ -15,6 +15,9 @@
         android:id="@+id/spin"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:entries="@array/category_names"></Spinner>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"></Spinner>
 
 </LinearLayout>
