--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -40,7 +40,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Income"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/EntertainmentTxt"
@@ -48,7 +49,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Entertainment"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/HousingTxt"
@@ -56,7 +58,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Housing"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/DebtTxt"
@@ -64,7 +67,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Debt"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/FoodTxt"
@@ -72,7 +76,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Food"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/SavingsTxt"
@@ -80,7 +85,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Savings"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/UtilTxt"
@@ -88,7 +94,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Utilities"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/PersonalCareDisplay"
@@ -96,7 +103,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Personal Care"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
 
                     <EditText
                         android:id="@+id/HealthCareTxt"
@@ -104,7 +112,8 @@
                         android:layout_height="47dp"
                         android:ems="10"
                         android:hint="Health Care"
-                        android:inputType="textPersonName" />
+                        android:inputType="phone"
+                        android:imeOptions="actionDone"/>
                 </LinearLayout>
 
                 <LinearLayout
