--- a/app/src/main/res/layout/activity_update_salary.xml
+++ b/app/src/main/res/layout/activity_update_salary.xml
@@ -16,7 +16,7 @@
         android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="New Salary"
-        android:inputType="textPersonName"
+        android:inputType="phone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.044"
